src/test/deca/context/invalid/avecObjet/heritage_not_field_asm.deca
class A {
    int x;
}

class B extends A {
    void x() asm("RTS");
}